--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Title!
+description: Happy blogging... ❤
+github_username: Serjssv
 
 # Email and twitter are optional:
 email:
 
 # Set this to true to get LaTeX math equation support
 use_math: True
-
 
 # Everything below here can be ignored, unless you want to change the theme entirely
 theme: minima
